<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Vise_Sensors" Id="{95cf3076-accb-4cb6-a216-f082c3ff0877}">
    <Declaration><![CDATA[TYPE ST_Vise_Sensors :
STRUCT
	// Robot
	bViseIn					:BIT;	
	bViseOut				:BIT;	
	// Stopper 1
	bStopper_In_Hold		:BIT;
	bStopper_In_Release		:BIT;
	// Stopper 2
	bStopper_Out_Hold		:BIT;
	bStopper_Out_Release	:BIT;
	bInPos					:BIT;
	bOutPos					:BIT;
	
	bViseIsOut				:BIT;
	{attribute 'hide'} 
	_reserved_1			:BIT;
	{attribute 'hide'}
	_reserved_2			:BIT;
	{attribute 'hide'} 
	_reserved_3			:BIT;
	{attribute 'hide'}
	_reserved_4			:BIT;
	{attribute 'hide'} 
	_reserved_5			:BIT;
	{attribute 'hide'}
	_reserved_6			:BIT;
	{attribute 'hide'}
	_reserved_7			:BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>